--- a/jobs/templates/jobs/detail.html
+++ b/jobs/templates/jobs/detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 {% block title %}{{ job.title }} | George Christie Development{% endblock %}
 
@@ -48,25 +49,35 @@
 
         <section class="container py-4">
             <div class="row justify-content-center">
-                <div class="col-8">
+                <div class="col-12 col-md-10 col-lg-8">
                     <p>{{ job.body }}</p>
                 </div>
             </div>
-            <div class="row justify-content-center">
-                <div class="col-8">
-                    <a href="">
-                        <div class="text-uppercase btn-custom">
-                            <i class="material-icons">open_in_new</i> View Site
-                        </div>
-                    </a>
 
+            {% if job.completed %}
+                <div class="row justify-content-center">
+                    <div class="col-12 col-md-10 col-lg-8">
+                        <a href={{ job.url }}>
+                            <div class="text-uppercase btn-custom">
+                                <i class="material-icons">open_in_new</i> View Site
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
-            <div class="row justify-content-center pt-4">
-                <div class="col-8">
-                    <img class="img-fluid" src="{{ job.image.url }}"/>
+                <div class="row justify-content-center pt-4">
+                    <div class="col-12 col-md-10 col-lg-8">
+                        <img class="img-fluid" src="{{ job.display_image.url }}"/>
+                    </div>
                 </div>
-            </div>
+            {% else %}
+                <div class="row justify-content-center pt-4">
+                    <div class="col-12 col-md-10 col-lg-8">
+                        <img class="img-fluid" src="{% static 'page-not-live.png' %}"/>
+                    </div>
+                </div>
+            {% endif %}
+
+
         </section>
 
     </main>
