--- a/portfolio/static/style.css
+++ b/portfolio/static/style.css
@@ -3,8 +3,10 @@
     --main-bg-color: #F8F9FA;
     --dark-bg-color: #243542;
     --darker-bg-color: #152532;
-    --grey-bg-color: #edf0f2;
-    --accent-color: #119da4;
+    /*--grey-bg-color: #edf0f2;*/
+    --secondary-bg-color: #f2efea;
+    /*--accent-color: #119da4;*/
+    --accent-color: #66d7d1;
     --text-primary-color: #212529;
 }
 
@@ -26,6 +28,31 @@ h1, h2 {
 a, a:hover {
     text-decoration: none;
     color: inherit;
+}
+
+footer {
+    background-color: var(--darker-bg-color);
+    color: rgba(255, 255, 255, .5);
+    font-size: 10pt;
+}
+
+footer .icon-box {
+    display: flex;
+    background-color: var(--dark-bg-color);
+    width: 50px;
+    height: 50px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 8px;
+    transition-duration: 0.3s;
+}
+
+footer .icon-box i {
+    font-size: 14pt;
+}
+
+footer .icon-box:hover {
+    transform: scale(0.9);
 }
 
 .text-accent {
@@ -56,7 +83,6 @@ a, a:hover {
     color: #fff;
     padding: 8px 12px;
     text-align: center;
-    vertical-align: center;
     font-weight: 600;
     transition: 0.3s;
 }
@@ -86,7 +112,7 @@ a, a:hover {
 }
 
 .portfolio-section {
-    background-color: var(--grey-bg-color);
+    background-color: var(--secondary-bg-color);
 }
 
 .overlay-image {
