--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Raleway|Audiowide|Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
 </head>
@@ -19,7 +23,7 @@
 
 <header>
     <nav class="navbar navbar-expand-sm navbar-dark navbar-custom px-4">
-{#        <a class="navbar-brand" href="{% url 'home' %}">George Christie Development</a>#}
+        {#        <a class="navbar-brand" href="{% url 'home' %}">George Christie Development</a>#}
         <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                 aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -44,8 +48,23 @@
     {% endblock %}
 </div>
 
-<footer>
+<footer class="container-fluid footer-custom text-center py-4">
+    <div class="row justify-content-center">
+        <a href="https://github.com/GTXiee" target="_blank">
+            <div class="icon-box">
+                <i class="fab fa-github"></i>
+            </div>
+        </a>
+        <a href="https://www.linkedin.com/in/george-christie/" target="_blank">
+            <div class="icon-box">
+                <i class="fab fa-linkedin-in"></i>
+            </div>
+        </a>
 
+    </div>
+    <div class="row justify-content-center mt-2 text-uppercase">
+        George Christie
+    </div>
 </footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
