Changed background and added favicon

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -6,19 +6,34 @@
 
     <main role="main">
 
-        <section class="container-fluid top-half">
-            <div class="row h-100">
-                <div class="col my-auto text-center">
-                    <h1 class="h2 text-light raleway">Hello, I'm <b class="text-accent">George Christie</b>.<br>
-                        I'm a self-taught Django developer.</h1>
-                    <a href="#portfolio">
-                        <div class="btn-custom-outline mt-2">View my work</div>
-                    </a>
+        {#        <section class="container-fluid top-half">#}
+        {#            <div class="row h-100">#}
+        {#                <div class="col my-auto text-center">#}
+        {#                    <h1 class="h2 text-light raleway">Hello, I'm <b class="text-accent">George Christie</b>.<br>#}
+        {#                        I'm a self-taught Django developer.</h1>#}
+        {#                    <a href="#portfolio">#}
+        {#                        <div class="btn-custom-outline mt-2">View my work</div>#}
+        {#                    </a>#}
+        {#                </div>#}
+        {##}
+        {#            </div>#}
+        {##}
+        {#        </section>#}
+
+        <section class="hero">
+            <div class="container-fluid h-100">
+                <div class="row h-100">
+                    <div class="col my-auto text-center">
+                        <h1 class="h2 text-light raleway">Hello, I'm <b class="text-accent">George Christie</b>.<br>
+                                I'm a self-taught Django developer.</h1>
+                        <a href="#portfolio">
+                            <div class="btn-custom-outline mt-2">View my work</div>
+                        </a>
+                    </div>
                 </div>
-
             </div>
-
         </section>
+
 
         <section class="bg-light">
             <div class="container py-5">
@@ -42,7 +57,7 @@
         <section>
             <div class="portfolio py-5 portfolio-section" id="portfolio">
                 <div class="container">
-                    <h2 class="audiowide text-center pb-3">Projects</h2>
+                    <h2 class="audiowide text-center pb-4">Projects</h2>
 
                     <div class="row">
 
