--- a/portfolio/static/style.css
+++ b/portfolio/static/style.css
@@ -102,9 +102,22 @@ footer .icon-box:hover {
     text-transform: none;
 }
 
+/* The hero image */
+.hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono.jpg");
+    height: 100vh;
+    width: 100%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .top-half {
     height: 100vh;
     background-color: var(--dark-bg-color);
+    /*background-image: url("/static/desert-mono.jpg");*/
 }
 
 .navbar-custom {
@@ -144,7 +157,7 @@ footer .icon-box:hover {
 }
 
 .job-display:hover .overlay-image {
-    opacity: 0;
+    opacity: 0.2;
 }
 
 .job-display:hover .overlay-middle {
