--- a/portfolio/static/style.css
+++ b/portfolio/static/style.css
@@ -104,7 +104,7 @@ footer .icon-box:hover {
 
 /* The hero image */
 .hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono-compressed.jpg");
     height: 100vh;
     width: 100%;
 
