--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="no-js">
 <head>
     {% load staticfiles %}
     <meta charset="utf-8">
@@ -14,8 +14,14 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
+    <!-- Custom js -->
+    <script>  document.documentElement.classList.remove("no-js")</script>
+    <script src="{% static 'js/modernizr-custom.js' %}"></script>
+
+
     <!-- Custom css -->
     <link rel="stylesheet" href="{% static 'style.css' %}">
+
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
@@ -48,8 +54,10 @@
 
 <body>
 <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TCBGMG"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<noscript>
+    <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5TCBGMG"
+            height="0" width="0" style="display:none;visibility:hidden"></iframe>
+</noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <header>
@@ -67,8 +75,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
                 <a class="nav-item nav-link" href="{% url 'projects' %}">Portfolio</a>
                 <a class="nav-item nav-link" href="">Contact</a>
-
-
             </div>
         </div>
     </nav>
