--- a/portfolio/static/style.css
+++ b/portfolio/static/style.css
@@ -104,16 +104,25 @@ footer .icon-box:hover {
 }
 
 /* The hero image */
-.hero {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono-compressed.jpg");
+.webp .hero {
     height: 100vh;
     width: 100%;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono.webp");
+
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.no-webp .hero {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono-compressed.jpg");
+}
+
+/*.webp .hero {*/
+    /*background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("/static/desert-mono.webp");*/
+/*}*/
 
 .top-half {
     height: 100vh;
