Added sitemap and now using url slugs rather than id

--- a/jobs/templates/jobs/projects.html
+++ b/jobs/templates/jobs/projects.html
@@ -15,7 +15,7 @@
             <div class="row py-5">
                 {% for job in latest_jobs.all %}
                     <div class="col-md-6 job-display">
-                        <a href="{% url 'job_detail' job.id %}">
+                        <a href="{% url 'job_detail' job.slug %}">
                             <img class="img-fluid overlay-image" src="{{ job.portfolio_image.url }}">
                             <div class="overlay-middle">
                                 <h3 class="h5 font-weight-bold">{{ job.title }}</h3>
