--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -65,7 +65,7 @@
 
                         {% for job in latest_jobs.all %}
                             <div class="col-md-6 col-lg-4 job-display">
-                                <a href="{% url 'job_detail' job.id %}">
+                                <a href="{% url 'job_detail' job.slug %}">
                                     {#                                <div class="card mb-4 shadow-sm">#}
                                     {#                                    <img class="card-img-top" src="{{ job.image.url }}"/>#}
                                     {#                                    <div class="card-body">#}
