--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -34,6 +34,9 @@
     <meta name="msapplication-config" content="{% static 'favicon/browserconfig.xml' %}">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Self canonical -->
+    <link rel="canonical" href="{{ CANONICAL_PATH }}"/>
+
     <!-- Google Tag Manager -->
     <script>(function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -60,49 +63,53 @@
 </noscript>
 <!-- End Google Tag Manager (noscript) -->
 
-<header>
-    <nav class="navbar navbar-expand-sm navbar-dark navbar-custom px-4">
-        {#        <a class="navbar-brand" href="{% url 'home' %}">George Christie Development</a>#}
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav ml-auto raleway text-uppercase">
-                {#                <a class="nav-item nav-link" href="https://github.com/GTXiee" target="_blank">GitHub</a>#}
-                {#                <a class="nav-item nav-link" href="{% static 'resume.pdf' %}" target="_blank">Resume</a>#}
-                {#                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>#}
-                <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
-                <a class="nav-item nav-link" href="{% url 'projects' %}">Portfolio</a>
-                <a class="nav-item nav-link" href="">Contact</a>
+<div class="content">
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark navbar-custom px-4">
+            {#        <a class="navbar-brand" href="{% url 'home' %}">George Christie Development</a>#}
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse"
+                    data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ml-auto raleway text-uppercase">
+                    {#                <a class="nav-item nav-link" href="https://github.com/GTXiee" target="_blank">GitHub</a>#}
+                    {#                <a class="nav-item nav-link" href="{% static 'resume.pdf' %}" target="_blank">Resume</a>#}
+                    {#                <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>#}
+                    <a class="nav-item nav-link" href="{% url 'home' %}">Home</a>
+                    <a class="nav-item nav-link" href="{% url 'projects' %}">Portfolio</a>
+                    <a class="nav-item nav-link" href="{% url 'contact' %}">Contact</a>
+                </div>
             </div>
-        </div>
-    </nav>
-</header>
+        </nav>
+    </header>
 
-<div>
-    {% block content %}
-    {% endblock %}
+    <div>
+        {% block content %}
+        {% endblock %}
+    </div>
+
+    <footer class="container-fluid footer-custom text-center">
+        <div class="row justify-content-center">
+            <a href="https://github.com/GTXiee" target="_blank">
+                <div class="icon-box">
+                    <i class="fab fa-github"></i>
+                </div>
+            </a>
+            <a href="https://www.linkedin.com/in/george-christie/" target="_blank">
+                <div class="icon-box">
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+            </a>
+
+        </div>
+        <div class="row justify-content-center mt-2 text-uppercase">
+            George Christie
+        </div>
+    </footer>
 </div>
 
-<footer class="container-fluid footer-custom text-center py-4">
-    <div class="row justify-content-center">
-        <a href="https://github.com/GTXiee" target="_blank">
-            <div class="icon-box">
-                <i class="fab fa-github"></i>
-            </div>
-        </a>
-        <a href="https://www.linkedin.com/in/george-christie/" target="_blank">
-            <div class="icon-box">
-                <i class="fab fa-linkedin-in"></i>
-            </div>
-        </a>
-
-    </div>
-    <div class="row justify-content-center mt-2 text-uppercase">
-        George Christie
-    </div>
-</footer>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
