Added keyword wrapper

--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -17,6 +17,7 @@
     <!-- Custom js -->
     <script>  document.documentElement.classList.remove("no-js")</script>
     <script src="{% static 'js/modernizr-custom.js' %}"></script>
+    {% block javascript %}{% endblock %}
 
 
     <!-- Custom css -->
