Added meta-descriptions and updated copy

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -27,7 +27,7 @@
                 <div class="row h-100">
                     <div class="col my-auto text-center">
                         <h1 class="h2 text-light raleway">Hello, I'm <b class="text-accent">George Christie</b>.<br>
-                                I'm a self-taught Django developer.</h1>
+                            I'm a self-taught Django developer.</h1>
                         <a href="#portfolio">
                             <div class="btn-custom-outline mt-2">View my work</div>
                         </a>
@@ -46,9 +46,10 @@
                     </div>
                     <div class="col-md-6 col-lg-4 text-center">
                         <p>I'm currently a Senior Digital Marketing executive at upriseUP in Chesham. During my time
-                            there I have discovered a love of coding after creating scripts to automate tasks. After
-                            playing with a few languages and frameworks over the past year I have found that the
-                            the power and simplicity of Django make it a joy to work with.
+                            here I have discovered a love of coding after creating scripts to automate tasks. With a
+                            strong understanding in Technical SEO, I know the practices to ensure that a website is
+                            built correctly to maximise it's outreach and performance. After playing with a few languages and
+                            frameworks over the past year I have landed on Django due to it's power and simplicity.
                         </p>
                     </div>
                 </div>
