--- a/jobs/templates/jobs/keyword-wrapper.html
+++ b/jobs/templates/jobs/keyword-wrapper.html
@@ -1,17 +1,24 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
-{% block title %}{{ job.title }} | George Christie Development{% endblock %}
+{% block title %}Google Keyword Wrapper Tool | George Christie Development{% endblock %}
+{% block description %}A simple AdWords keyword wrapper tool to help speed up the creation of your PPC campaigns.{% endblock %}
 
 {% block content %}
 
     <main role="main">
 
-        <section class="header pt-5 container">
-            <h1 class="text-center audiowide">{{ job.title }}</h1>
+        <section class="header pt-5 text-center container">
+            <h1 class="text-center audiowide pb-2">{{ job.title }}</h1>
         </section>
 
-        <section class="container py-4">
+        <section class="container py-3">
+            <div class="row text-center justify-content-center pb-2">
+                <div class="col-md-10 col-lg-6">
+                    <p class="text-center">Speed up the creation of your Google Ads and PPC campaigns with this simple
+                        keyword wrapper tool.</p>
+                </div>
+            </div>
             <div class="row justify-content-center">
                 <div class="col-10 col-sm-8 col-lg-5 d-flex justify-content-between">
                     <label for="broad-checkbox">
