--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <title>{% block title %}George Christie Development{% endblock %}</title>
+    <meta name="description" content="{% block description %}I am a self-taught web developer, specialising in the Django framework.{% endblock %}">
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
