Fixed meta descriptions

--- a/jobs/templates/jobs/keyword-wrapper.html
+++ b/jobs/templates/jobs/keyword-wrapper.html
@@ -16,15 +16,17 @@
         <section class="container py-3">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-6">
-                    <div class="row pb-3">
+                    <div class="row">
                         <div class="col">
                             <p>Speed up the creation of your Google Ads and PPC campaigns with this
                                 keyword wrapper tool. Choose the match types you desire and generate
                                 a new list of keywords.
-                            <p>This tool also doubles up as a keyword permutation generator, allowing you to concatenate
+                            <p class="mb-0">This tool also doubles up as a keyword permutation generator, allowing you to concatenate
                                 lists of keywords to deliver all the combinations.</p>
                         </div>
                     </div>
+
+                    <hr class="my-4">
 
                     <div class="row justify-content-center pb-4">
                         <div class="text-center">
