--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
           integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Raleway|Audiowide|Material+Icons" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway|Audiowide|Material+Icons&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
           integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
@@ -93,12 +93,12 @@
 
     <footer class="container-fluid footer-custom text-center">
         <div class="row justify-content-center">
-            <a href="https://github.com/GTXiee" target="_blank">
+            <a href="https://github.com/GTXiee" aria-label="Link to my Github account" rel="noopener" target="_blank">
                 <div class="icon-box">
                     <i class="fab fa-github"></i>
                 </div>
             </a>
-            <a href="https://www.linkedin.com/in/george-christie/" target="_blank">
+            <a href="https://www.linkedin.com/in/george-christie/" aria-label="Link to my LinkedIn" rel="noopener" target="_blank">
                 <div class="icon-box">
                     <i class="fab fa-linkedin-in"></i>
                 </div>
