Fixed alignment issue with bio

--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -26,11 +26,11 @@
             <div class="container py-5">
                 <h2 class="audiowide">About</h2>
                 <div class="row justify-content-center align-items-center">
-                    <div class="col-md-6 col-lg-4 text-center py-3">
+                    <div class="col-md-6 col-lg-4 py-3 text-center">
                         <img class="img" src="{% static_webp 'bio-pic-round-300.png' %}" alt="Bio picture"/>
                     </div>
                     <div class="col-md-6 col-lg-4">
-                        <p>I'm currently a Senior Digital Marketing executive at upriseUP in Chesham. During my time
+                        <p id="home-bio">I'm currently a Senior Digital Marketing executive at upriseUP in Chesham. During my time
                             here I have discovered a love of coding after creating scripts to automate tasks. With a
                             strong understanding in Technical SEO, I know the practices to ensure that a website is
                             built correctly to maximise it's outreach and performance. After playing with a few languages and
